# pixel-crew

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  package-lock.json
client/: Cargo.toml  Makefile.toml  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.tsx  app.rs
client/src/components/: PixelCanvas.css  PixelCanvas.tsx  body.rs  footer.rs  header.rs  mod.rs  nav.rs  pixel_canvas.rs
client/src/routes/: draw.rs  home.rs  mod.rs
client/static/: index.html  styles.scss
docs/: CNAME  index.html  pixel_crew_bg.550ca551.wasm  pixel_crew_bg.b0389dd2.wasm  static.71d99654.js  static.71d99654.js.map  static.77de5100.js  static.77de5100.js.map  styles.164d45a1.css  styles.164d45a1.css.map  styles.b3a445d9.css  styles.b3a445d9.css.map
program/: Cargo.toml  Makefile.toml
program/src/: instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: lib.rs
src/components/: Header.tsx
