[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "My awesome Yew app."
edition = "2021"
license = "Apache-2.0/MIT"
name = "pixel-crew"
readme = "./README.md"
repository = "https://github.com/jetli/create-yew-app.git"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-events = "0.1.2"
log = "0.4"
yew = "0.19.3"
yew-router = "0.16.0"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
weblog = "0.3.0"
web-sys = { version = "0.3.59", features = ["Element", "DomRect"] }
stylist = "0.10"
itertools = "0.10.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.14"
gloo-utils = "0.1.0"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCollection",
]
