[package]
name = "program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.3"
thiserror = "1.0.25"
solana-program = "1.10.21"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.10.21"
solana-sdk = "=1.10.21"
solana-logger = "=1.10.21"
solana-validator = "=1.10.21"

[lib]
crate-type = ["cdylib", "lib"]
